fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ body {
 }
 
 .title h1 {
+    text-align: center;
     font-size: x-large;
     font-weight: bold;
 }
